Fix API build output (dist) for Render

--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
-    "start": "next start -p 3000",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "db:seed": "tsx prisma/seed.ts",
     "lint": "next lint"
   },
   "dependencies": {
