--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
@@ -18,8 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
@@ -27,9 +30,11 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.7",
+    "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.15",
     "prisma": "^5.19.1",
-    "tsx": "^4.17.0",
+    "tsx": "^4.19.1",
     "typescript": "^5.5.4"
   }
 }
